--- a/duFaitMaison/src/app/header/header.component.html
+++ b/duFaitMaison/src/app/header/header.component.html
@@ -1,14 +1,16 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
-        <a class="navbar-brand" href="#" (click)="onClick()">{{ title }}</a>
+        <a class="navbar-brand" href=""     routerLink="/"
+        routerLinkActive="selected"
+        [routerLinkActiveOptions]="{ exact: true }">{{ title }}</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="#" [ngClass]="{disabled: isDisabled}">Accueil <span class="sr-only">(current)</span></a>
+                <li class="nav-item" >                                    
+                    <a class="nav-link" routerLink="/recette" routerLinkActive="selected" [routerLinkActiveOptions]="{ exact: true }"> Recette</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
