Init form recettePage

--- a/duFaitMaison/src/app/recette/recette.component.html
+++ b/duFaitMaison/src/app/recette/recette.component.html
@@ -1,1 +1,17 @@
-<p>recette works!</p>
+<div class="container">
+    <div class="row col-12 shadow-sm p-3 mb-5 bg-white rounded mt-5">
+        <div class="col-md-6">
+            <label for="titre">Titre :</label>
+            <input type="text" class="form-control">
+        </div>
+        <div class="col-md-6">
+            <label for="sous-titr"><i>Sous titre :</i></label>
+            <input type="text" class="form-control">
+        </div>
+
+        <div class="form-floating col-md-12">
+            <label for="description">Description</label>
+            <textarea class="form-control" placeholder="Décrivez ici votre produit" id="floatingTextarea2" style="height: 100px"></textarea>
+        </div>
+    </div>
+</div>
