--- a/duFaitMaison/src/app/home/home.component.html
+++ b/duFaitMaison/src/app/home/home.component.html
@@ -1,28 +1,50 @@
 <div class="container">
     <div class="row mt-5">
-        <div class="col-sm-12 col-md-6 col-lg-4 mb-5" *ngFor="let property of properties; let i = index">
+        <div class="col-sm-12 col-md-6 col-lg-4 mb-5" *ngFor="let property of recettes; let i = index">
             <div class="card" style="width: 18rem;">
-                <img src="{{property.image}}" class="card-img-top" alt="">
+                <img src="" [ngStyle]="{'max-height.px': '190'}" class="card-img-top" alt="">
                 <div class="card-body">
                     <h5 class="card-title">{{property.title}}</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">{{property.subTitle}}</h6>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <h6 class="card-subtitle mb-2 text-muted">{{property.subtitle}}</h6>
+                    <p class="card-text">{{ property.description }}</p>
                     <hr />
                     <strong>Crée par:</strong> {{property.pseudo}}<br />
-                    <strong>Quantité:</strong> {{property.quantity}}<br />
-                    <strong>Lieu:</strong> {{property.location}} ({{property.zip}})<br />
+                    <strong>Catégorie:</strong> {{property.category}}<br />
+                    <strong>Lieu:</strong> {{property.city}} ({{property.zip}})<br />
                     <strong>Prix:</strong> {{property.price}} €<br />
-                    <ng-container *ngIf="!property.isAvailable; else elseTemplate">
+                    <hr style="border: 1px dashed rgb(236, 236, 236)">
+                    <button class="btn btn-danger text-white" (click)="deleteRecette(property.id)"><i class="fas fa-trash-alt"></i> Supprimer</button>
+                    <button class="btn btn-primary float-right" (click)="editRecette(property.id)"><i class="fas fa-edit"></i> Editer</button>
+                    <!-- <ng-container *ngIf="!property.isAvailable; else elseTemplate">
                         <span class="text-danger"><i class="fas fa-times-circle"></i> {{ getAvailability(i) }}</span>
                     </ng-container>
                     <ng-template #elseTemplate>
                         <span class="text-success"><i class="fas fa-check-circle"></i> {{ getAvailability(i) }}</span>
                     </ng-template>
                     <br />
-                    <a href="#" class="card-link">Voir dans la même catégories</a><br />
+                    <a href="#" class="card-link">Voir dans la même catégories</a><br /> -->
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- La modal de confirmation -->
+    <div class="modal fade" id="modalConfirmation" tabindex="-1" role="dialog" aria-labelledby="modalConfirmationLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="modalConfirmationLabel">Confirmer cette action</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+                </div>
+                <div class="modal-body">
+                    <p>Vous êtes sur le point de supprimer cette recette, cette action est définitive et irréversible! Vous souhaitez continuer?</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Annuler</button>
+                    <button type="button" class="btn btn-primary" (click)="confirmDelete()">Continuer</button>
                 </div>
             </div>
         </div>
     </div>
 </div>
-
