--- a/duFaitMaison/src/app/recette/recette.component.html
+++ b/duFaitMaison/src/app/recette/recette.component.html
@@ -2,23 +2,24 @@
     <div class="row col-12 shadow-sm p-3 bg-white rounded mt-5">
         <h1 style="text-align: center;"><i class="fas fa-pen"></i> Saisissez votre recette</h1>
     </div>
-    <form [formGroup]="dataFormCreate" (ngSubmit)="onSubmitDataFormCreate()">
+    <form #f="ngForm" (ngSubmit)="onSubmitDataFormCreate(f)">
         <div class="row col-12 shadow-sm p-3 mb-5 bg-white rounded mt-5">
 
             <div class="col-md-6">
                 <label for="title">Titre :</label>
-                <input type="text" class="form-control" formControlName="title">
+                <input type="text" class="form-control" name="title" [(ngModel)]="recette.title" #trackTitle="ngModel" #recetteTile="ngModel" required>
+                <p class="alert" *ngIf="!trackTitle.valid && trackTitle.touched">Le titre est obligatoire!</p>
             </div>
             <div class="col-md-6">
                 <label for="subtitle"><i>Sous titre :</i></label>
-                <input type="text" class="form-control" formControlName="subtitle">
+                <input type="text" class="form-control" name="subtitle" [(ngModel)]="recette.subtitle" #recetteSubtitle="ngModel" required>
             </div>
             <div class="col-md-12 mt-3">
                 <div class="input-group mb-3">
                     <div class="input-group-prepend">
                         <label class="input-group-text" for="inputGroupSelect01">Catégorie :</label>
                     </div>
-                    <select class="custom-select" id="inputGroupSelect01" formControlName="category">
+                    <select class="custom-select" id="inputGroupSelect01" name="category" [(ngModel)]="recette.category" #recetteCategory="ngModel" required>
                 <option> ----- Séléctionnez -------</option>
                 <option value="1">Gateau Anniversaire</option>
                 <option value="2">Pâtisserie</option>
@@ -28,30 +29,31 @@
             </div>
             <div class="col-md-12">
                 <label for="description">Description</label>
-                <textarea class="form-control" placeholder="Décrivez ici votre produit" id="floatingTextarea2" style="height: 100px" formControlName="description"></textarea>
+                <textarea class="form-control" placeholder="Décrivez ici votre produit" id="floatingTextarea2" name="description" style="height: 100px" [(ngModel)]="recette.description" #recetteDescription="ngModel" required></textarea>
             </div>
             <div class="col-md-6">
                 <label for="city">Ville :</label>
-                <input type="text" class="form-control" formControlName="city">
+                <input type="text" class="form-control" name="city" [(ngModel)]="recette.city" #recetteCity="ngModel" required>
             </div>
             <div class="col-md-6">
                 <label for="zip">Code Postal :</label>
-                <input type="text" class="form-control" formControlName="zip">
+                <input type="text" class="form-control" name="zip" [(ngModel)]="recette.zip" #recetteZip="ngModel" required>
             </div>
             <hr/>
             <div class="input-group mt-3 col-md-3">
                 <div class="input-group-prepend">
                     <span class="input-group-text"><strong>Prix: </strong></span>
                 </div>
-                <input type="text" class="form-control" style="font-weight: bold;" dir="rtl" aria-label="Prix en euro" formControlName="price">
+                <input type="number" class="form-control" style="font-weight: bold;" dir="rtl" name="price" aria-label="Prix en euro" [(ngModel)]="recette.price" #recettePrice="ngModel" required>
                 <div class="input-group-append">
                     <span class="input-group-text">€</span>
                 </div>
             </div>
             <div style="float:right;" class="col-12 mt-3">
-                <button class="btn btn-primary" type="submit">Enregistrer</button>
+                <button class="btn btn-primary" type="submit" [disabled]="f.invalid">Enregistrer</button>
             </div>
 
         </div>
+        {{f.value | json}}
     </form>
 </div>
