--- a/duFaitMaison/src/app/header/header.component.html
+++ b/duFaitMaison/src/app/header/header.component.html
@@ -1,19 +1,17 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light navbar-costum">
     <div class="container">
-        <a class="navbar-brand" href=""     routerLink="/"
-        routerLinkActive="selected"
-        [routerLinkActiveOptions]="{ exact: true }">{{ title }}</a>
+        <a class="navbar-brand nav-link-title" href="" routerLink="/" routerLinkActive="selected" [routerLinkActiveOptions]="{ exact: true }">{{ title }}</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item" >                                    
-                    <a class="nav-link" routerLink="/recette" routerLinkActive="selected" [routerLinkActiveOptions]="{ exact: true }"> Recette</a>
+            <ul class="navbar-nav ml-auto" id="menu-links">
+                <li class="nav-item">
+                    <a class="nav-link-title" routerLink="/recette" routerLinkActive="selected" [routerLinkActiveOptions]="{ exact: true }"> Recette</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a class="nav-link-title dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       Administration
                     </a>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
