--- a/duFaitMaison/src/app/home/home.component.html
+++ b/duFaitMaison/src/app/home/home.component.html
@@ -1,20 +1,36 @@
 <div class="container">
-    <div class="row mt-5">
+    <div class="row col-12 shadow-sm p-3 mb-3 bg-white rounded mt-5">
+        <div class="w-100">
+            <h3 class="float-left"><i class="fas fa-list"></i> Liste des recettes</h3>
+            <button class="btn btn-success float-right" routerLink="/recette"><i class="fas fa-plus"></i> Créer une recette</button>
+        </div>
+    </div>
+    <div class="row col-12 alert alert-success p-2 mt-3" *ngIf="success !== '' ">
+        <i class="fas fa-check-circle" style="margin-top:.29rem"></i><span class="pl-2">{{success}}</span>
+    </div>
+    <div class="row col-12 mt-3 shadow-sm pt-5 mb-5 bg-white rounded mr-5">
         <div class="col-sm-12 col-md-6 col-lg-4 mb-5" *ngFor="let property of recettes; let i = index">
-            <div class="card" style="width: 18rem;">
-                <img src="" [ngStyle]="{'max-height.px': '190'}" class="card-img-top" alt="">
+            <div class="card w-100 mh-100" style="min-height:560px;">
+                <img src="https://pastryfreak.fr/wp-content/uploads/2020/04/recette-gateau-zebre-10.jpg" [ngStyle]="{'max-height.px': '190'}" class="card-img-top" alt="">
                 <div class="card-body">
                     <h5 class="card-title">{{property.title}}</h5>
                     <h6 class="card-subtitle mb-2 text-muted">{{property.subtitle}}</h6>
                     <p class="card-text">{{ property.description }}</p>
                     <hr />
-                    <strong>Crée par:</strong> {{property.pseudo}}<br />
+                    <strong>Crée par:</strong> <br />
                     <strong>Catégorie:</strong> {{property.category}}<br />
                     <strong>Lieu:</strong> {{property.city}} ({{property.zip}})<br />
                     <strong>Prix:</strong> {{property.price}} €<br />
-                    <hr style="border: 1px dashed rgb(236, 236, 236)">
-                    <button class="btn btn-danger text-white" (click)="deleteRecette(property.id)"><i class="fas fa-trash-alt"></i> Supprimer</button>
-                    <button class="btn btn-primary float-right" (click)="editRecette(property.id)"><i class="fas fa-edit"></i> Editer</button>
+                    <div style="    position: absolute;
+                    width: 90%;
+                    left: 0;
+                    margin: 15px;
+                    bottom: 0;
+                ">
+                        <hr style="border: 1px dashed rgb(236, 236, 236)">
+                        <button class="btn btn-danger text-white" (click)="deleteRecette(property.id)"><i class="fas fa-trash-alt"></i> Supprimer</button>
+                        <button class="btn btn-primary float-right" (click)="editRecette(property.id)"><i class="fas fa-edit"></i> Editer</button>
+                    </div>
                     <!-- <ng-container *ngIf="!property.isAvailable; else elseTemplate">
                         <span class="text-danger"><i class="fas fa-times-circle"></i> {{ getAvailability(i) }}</span>
                     </ng-container>
@@ -44,6 +60,75 @@
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Annuler</button>
                     <button type="button" class="btn btn-primary" (click)="confirmDelete()">Continuer</button>
                 </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Modal édition d'une recette -->
+    <div class="modal fade" id="modalEditRecette" tabindex="-1" role="dialog" aria-labelledby="modalEditRecetteLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <form #f="ngForm" (ngSubmit)="validateFormEdit(f)">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="modalEditRecetteLabel">Editer cette recette</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                          <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="row col-12">
+
+                            <div class="col-md-6">
+                                <label for="title">Titre :</label>
+                                <input type="text" class="form-control" name="title" [(ngModel)]="recetteToUpdate.title" #trackTitle="ngModel" #recetteTile="ngModel" required>
+                                <p class="alert" *ngIf="!trackTitle.valid && trackTitle.touched">Le titre est obligatoire!</p>
+                            </div>
+                            <div class="col-md-6">
+                                <label for="subtitle"><i>Sous titre :</i></label>
+                                <input type="text" class="form-control" name="subtitle" [(ngModel)]="recetteToUpdate.subtitle" #recetteSubtitle="ngModel" required>
+                            </div>
+                            <div class="col-md-12 mt-3">
+                                <div class="input-group mb-3">
+                                    <div class="input-group-prepend">
+                                        <label class="input-group-text" for="inputGroupSelect01">Catégorie :</label>
+                                    </div>
+                                    <select class="custom-select" id="inputGroupSelect01" name="category" [(ngModel)]="recetteToUpdate.category" #recetteCategory="ngModel" required>
+                                      <option> ----- Séléctionnez -------</option>
+                                      <option value="1">Gateau Anniversaire</option>
+                                      <option value="2">Pâtisserie</option>
+                                      <option value="3">Variété</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="col-md-12">
+                                <label for="description">Description</label>
+                                <textarea class="form-control" placeholder="Décrivez ici votre produit" id="floatingTextarea2" name="description" style="height: 100px" [(ngModel)]="recetteToUpdate.description" #recetteDescription="ngModel" required></textarea>
+                            </div>
+                            <div class="col-md-6">
+                                <label for="city">Ville :</label>
+                                <input type="text" class="form-control" name="city" [(ngModel)]="recetteToUpdate.city" #recetteCity="ngModel" required>
+                            </div>
+                            <div class="col-md-6">
+                                <label for="zip">Code Postal :</label>
+                                <input type="text" class="form-control" name="zip" [(ngModel)]="recetteToUpdate.zip" #recetteZip="ngModel" required>
+                            </div>
+                            <hr/>
+                            <div class="input-group mt-3 col-md-3" style="min-width: 240px !important;">
+                                <div class="input-group-prepend">
+                                    <span class="input-group-text"><strong>Prix: </strong></span>
+                                </div>
+                                <input type="number" class="form-control" style="font-weight: bold;" dir="rtl" name="price" aria-label="Prix en euro" [(ngModel)]="recetteToUpdate.price" #recettePrice="ngModel" required>
+                                <div class="input-group-append">
+                                    <span class="input-group-text">€</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Annuler</button>
+                        <button type="submit" class="btn btn-primary" [disabled]="f.invalid">Valider</button>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
