Insertion via API des recettes + Registration des membres + gestion d'attente (Loader) + création des entités coté BO

--- a/duFaitMaison/src/app/header/header.component.html
+++ b/duFaitMaison/src/app/header/header.component.html
@@ -10,6 +10,9 @@
                 <li class="nav-item">
                     <a class="nav-link-title" routerLink="/recette" routerLinkActive="selected" [routerLinkActiveOptions]="{ exact: true }"> Recette</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link-title" routerLink="/inscription" routerLinkActive="selected" [routerLinkActiveOptions]="{ exact: true }"> S'inscrire</a>
+                </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link-title dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       Administration
