--- a/duFaitMaison/src/app/home/home.component.css
+++ b/duFaitMaison/src/app/home/home.component.css
@@ -10,3 +10,10 @@
     color: rgb(199, 198, 198);
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+
+.btn-delete-image {
+    position: absolute;
+    width: 1.3rem;
+    padding: 0px;
+    margin: 0px;
+}
