Refactor du dossier 'dufaitmaison' en 'front' + variabilisation/centralisation de l'apiBaseUrl + ajout de contraintes core sur les attributs User + UserRegistration : formattage de la valeur de la date pour envoie vers core

--- a/front/src/app/loader/loader/loader.component.html
+++ b/front/src/app/loader/loader/loader.component.html
@@ -1,7 +1,7 @@
 <div class="progress-loader" [hidden]="!loading">
     <div class="loading-spinner">
         <div class="carre-loading">
-            <img src="http://127.0.0.1:8000/images/loading-loader.svg">
+            <img [src]="imageApiUrl">
             <span class="loading-message">Patientez...</span>
         </div>
     </div>
