--- a/front/src/app/footer/footer.component.html
+++ b/front/src/app/footer/footer.component.html
@@ -5,7 +5,7 @@
                 <h5 class="text-uppercase">Du Fait Maison</h5>
 
                 <p>
-                    Est un site de référence qui répertorie toutes les recettes faites maison. Il a été fondé sur la base d'un besoin d'échange de recette entre particulier.
+                    Un site de référence qui répertorie toutes les recettes faites maison. Il a été fondé sur la base d'un besoin d'échange de recette entre particulier.
                 </p>
             </div>
             <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
