--- a/front/src/app/header/header.component.html
+++ b/front/src/app/header/header.component.html
@@ -8,7 +8,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto" id="menu-links">
                 <li class="nav-item">
-                    <a class="nav-link-title" routerLink="/recette" routerLinkActive="selected" [routerLinkActiveOptions]="{ exact: true }"> Recette</a>
+                    <a class="nav-link-title" routerLink="/my-recipes" routerLinkActive="selected" [routerLinkActiveOptions]="{ exact: true }">Mes recettes</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link-title" routerLink="/inscription" routerLinkActive="selected" [routerLinkActiveOptions]="{ exact: true }"> S'inscrire</a>
